--- a/src/Componenets/Home/Home.css
+++ b/src/Componenets/Home/Home.css
@@ -11,7 +11,7 @@
 
 .headImg {
   width: 100%;
-  max-width: 300px;
+  max-width: 600px;
   height: auto;
   object-fit: contain;
 }
@@ -48,6 +48,7 @@
   padding: 15px;
   border-radius: 10px;
   border: 1px solid #ffa500;
+  margin-top: 40px;
 }
 
 /* Responsive layout for small screens */
