--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 .App {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
   font-variation-settings: "wdth" 100;
   color: #2a4b5f;
@@ -12,4 +11,21 @@ body {
   background-image: linear-gradient(to right, #2a4b5f31 1px, transparent 1px),
     linear-gradient(to bottom, #2a4b5f31 1px, transparent 1px);
   background-size: 30px 30px; /* Adjust spacing between lines */
+}
+
+p,
+span,
+strong {
+  text-align: justify;
+  text-indent: 20px;
+  line-height: 1.8rem;
+}
+
+body > * {
+  margin: 10px;
+}
+
+h1 {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
