--- a/src/Componenets/Menu/Menu.css
+++ b/src/Componenets/Menu/Menu.css
@@ -36,3 +36,13 @@
 .cta-button:hover {
   background-color: #e69500;
 }
+
+.logoImg {
+  height: 50px;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
